--- a/staticfiles/main/base.css
+++ b/staticfiles/main/base.css
@@ -1,13 +1,20 @@
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
-
+*{
+    box-sizing: border-box !important;
+}
+.navbar{
+    z-index: 5000;
+    
+}
 .wrapper {
     display: flex;
     width: 100%;
 }
 
 #sidebar {
+    padding-top: 50px !important;
     width: 250px;
     position: fixed;
     top: 0;
@@ -25,13 +32,13 @@
 
 #sidebar .sidebar-header {
     padding: 11px 20px 10px 20px;
-    background: rgb(171,92,114);
 }
 
 #sidebar ul.components {
     border-bottom: 1px solid rgb(55,70,80);
 }
-
+#sidebar>ul{
+}
 #sidebar ul p {
     color: #fff;
     padding: 10px;
@@ -41,6 +48,8 @@
     padding: 10px;
     font-size: 1.1em;
     display: block;
+    text-decoration: none;
+    color: white;
 }
 
 #sidebar ul li a:hover {
@@ -91,7 +100,6 @@ ul ul a {
 .menu-header {
     width:100%;
     height:64px;
-    background: rgb(171,92,114);
 }
 
 
@@ -104,6 +112,7 @@ ul ul a {
 #content {
     width: calc(100% - 250px);
     min-height: 100vh;
+    padding-top: 58px !important;
     transition: all 0.3s;
     position: absolute;
     top: 0;
