Responsive menu solved

--- a/main/static/main/base.css
+++ b/main/static/main/base.css
@@ -1,9 +1,12 @@
-/* ---------------------------------------------------
-    SIDEBAR STYLE
------------------------------------------------------ */
 *{
     box-sizing: border-box !important;
 }
+.sidebarCollapse, #mainlogoutbtn{
+    cursor: pointer!important;
+}
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
 .navbar{
     z-index: 5000;
     
